fixed issue with spacing, removed margin/ padding from ul element

--- a/css/flexbox-nav-exercise.css
+++ b/css/flexbox-nav-exercise.css
@@ -2,35 +2,35 @@
     box-sizing: border-box;
     border: solid black 1px;
     background-color: darkgrey;
+    display: block;
     /*padding: 1em;*/
-    margin: auto;
+    /*margin: auto 0 auto 0;*/
+    /*display: flex;*/
 }
 
 .topNav {
     box-sizing: border-box;
     display: flex;
-    flex-direction: row;
+    /*flex-direction: row;*/
     justify-content: space-around;
     align-items: center;
 }
 
-/*.optionOne.optionTwo.optionThree {*/
-/*    display: flex;*/
-/*}*/
-
 .optionOne>ul {
-
     display: flex;
     flex-direction: row;
     /*justify-content: start;*/
-
 }
 
-.optionTwo>ul {
+/*.optionOne>a {*/
+/*    float: left;*/
+/*}*/
+
+.optionTwo {
     color: black;
     font-size: 3em;
     padding: .2em 0 .2em 0;
-    margin: 0 90px 0 135px;
+    margin: auto;
 }
 
 .optionThree>ul {
@@ -39,8 +39,6 @@
     flex-direction: row;
     /*justify-content: end;*/
 }
-
-
 
 a {
     color: black;
@@ -52,10 +50,19 @@ a {
 
 ul {
     list-style: none;
-    margin: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding: 0;
+    /*margin: 0;*/
+    /*display: flex;*/
 }
+
+/*div {*/
+/*    display: flex;*/
+/*    justify-content: space-between;*/
+/*}*/
 
 a:hover {
     color: blue;
-    padding: 22px;
+    padding: 0 22px 0 22px;
 }
